--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
+    "@shopify/flash-list": "1.4.0",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "date-fns": "^2.29.3",
@@ -25,14 +26,19 @@
     "expo-splash-screen": "~0.18.1",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
+    "nanoid": "^4.0.2",
     "react": "18.2.0",
     "react-native": "0.71.6",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.9.0",
+    "react-native-get-random-values": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
     "react-native-responsive-dimensions": "^3.1.1",
-    "react-native-safe-area-context": "^4.5.0",
+    "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
+    "react-native-shared-element": "^0.8.8",
+    "react-navigation-shared-element": "^3.1.3",
+    "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "xlsx-populate": "^1.21.0",
