--- a/package.json
+++ b/package.json
@@ -15,7 +15,7 @@
     "@react-navigation/bottom-tabs": "^6.5.7",
     "@react-navigation/native": "^6.1.6",
     "@react-navigation/stack": "^6.3.16",
-    "@shopify/flash-list": "1.4.0",
+    "@shopify/flash-list": "^1.4.0",
     "axios": "^1.3.4",
     "buffer": "^6.0.3",
     "date-fns": "^2.29.3",
@@ -23,12 +23,11 @@
     "expo": "~48.0.6",
     "expo-file-system": "~15.2.2",
     "expo-sharing": "^11.2.2",
-    "expo-splash-screen": "~0.18.1",
+    "expo-splash-screen": "~0.18.2",
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
-    "nanoid": "^4.0.2",
     "react": "18.2.0",
-    "react-native": "0.71.6",
+    "react-native": "0.71.7",
     "react-native-dialog": "^9.3.0",
     "react-native-gesture-handler": "^2.9.0",
     "react-native-get-random-values": "^1.8.0",
@@ -38,7 +37,6 @@
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
     "react-navigation-shared-element": "^3.1.3",
-    "uuid": "^9.0.0",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "xlsx-populate": "^1.21.0",
