--- a/package.json
+++ b/package.json
@@ -37,6 +37,8 @@
     "react-native-screens": "^3.20.0",
     "react-native-shared-element": "^0.8.8",
     "react-navigation-shared-element": "^3.1.3",
+    "react-redux": "^8.0.5",
+    "redux": "^4.2.1",
     "xlsx": "^0.18.5",
     "xlsx-js-style": "^1.2.0",
     "xlsx-populate": "^1.21.0",
