--- a/package.json
+++ b/package.json
@@ -27,11 +27,12 @@
     "expo-status-bar": "~1.4.4",
     "expo-updates": "~0.16.4",
     "react": "18.2.0",
-    "react-native": "0.71.7",
+    "react-native": "0.71.8",
     "react-native-dialog": "^9.3.0",
-    "react-native-gesture-handler": "^2.9.0",
+    "react-native-gesture-handler": "~2.9.0",
     "react-native-get-random-values": "^1.8.0",
     "react-native-keyboard-aware-scroll-view": "^0.9.5",
+    "react-native-reanimated": "~2.14.4",
     "react-native-responsive-dimensions": "^3.1.1",
     "react-native-safe-area-context": "4.5.0",
     "react-native-screens": "^3.20.0",
